# rocks-testsuite

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
rocks_testsuite/: app.py  c2s_tests.py  result.py  signatures.py  test_session.py  util.py
rocks_testsuite/data/: questionnaire.json  test_metadata.json
rocks_testsuite/static/aptestsuite/: aptestsuite.css  testsuite.js
rocks_testsuite/static/fonts/inconsolata/: OFL.txt
rocks_testsuite/templates/: app.jinja  disclaimer.jinja  finish.jinja  get_actor_uri.jinja  get_auth_token.jinja  greeting.jinja  project_info.jinja  questions.jinja  report.jinja  results_table.jinja  setup.jinja
rocks_testsuite/templates/macros/: tables.jinja
