[tool.poetry]
name = "rocks-testsuite"
version = "0.1.0"
description = ""
authors = ["Steve Bate <svc-github@stevebate.net>"]
readme = "README.md"
packages = [{include = "rocks_testsuite"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
jinja2 = "^3.1.2"
uvicorn = "^0.22.0"
websockets = "^11.0.3"
httpx = "^0.24.1"
coloredlogs = "^15.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
watchfiles = "^0.19.0"
pre-commit = "^3.3.3"

[tool.poetry.scripts]
rocks = "rocks_testsuite.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
